--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,16 +33,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy to GitHub Pages (using GH_PAT if provided)
-        if: secrets.GH_PAT != ''
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GH_PAT }}
-          publish_dir: ./dist
-          publish_branch: gh-pages
-
-      - name: Deploy to GitHub Pages (using GITHUB_TOKEN)
-        if: secrets.GH_PAT == ''
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
